@@ -189,7 +189,6 @@ private:
     void setLevel(int level, bool haveChildren=true);
     bool usingTreeView() const { return mode<=Mode_DetailedTree; }
     bool usingListView() const { return mode>=Mode_List; }
-    bool eventFilter(QObject *o, QEvent *e);
 
 public Q_SLOTS:
     void focusSearch();
